...
                                    error = ex.message.toString()
                                )
                            }
                        }
                    } else{
                        _state.value = state.value.copy(
                            error = "Пароль должен содержать не менее 6 символов"
                        )
                    }
                } else{
                    _state.value = state.value.copy(
                        error = "Некорректная почта"
                    )
                }
            }
            LoginEvent.ClearError->{
                _state.value = state.value.copy(
                    error = ""
...
